CSS tweaks; fix <ol> on small screens
Ordered lists were overflowing their containers to
the left for some unknown reason. The simplest
solution was to increase the left-margin.

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,6 +1,6 @@
 /* Disable Picnic's default transition, which lasts for about a second on page load */
 * {
-  transition: all 0s ease !important;
+  transition: none !important;
 }
 
 header ul.flex {
@@ -29,10 +29,9 @@ header ul li a {
 
 .content {
   width: 50em;
-  max-width: 100%;
-  margin: 0 auto;
+  max-width: calc(100% - 20pt);
+  margin: 0 auto 25pt;
   word-wrap: break-word;
-  margin-bottom: 25pt;
 }
 
 textarea {
@@ -41,6 +40,10 @@ textarea {
 
 .pad {
   padding: 10pt;
+}
+
+ol {
+  margin-left: 30pt;
 }
 
 /* OLD CODE BELOW */
